--- a/form-pecas.html
+++ b/form-pecas.html
@@ -108,6 +108,14 @@
       color: #00bbf9;
       transform: translateX(-5px);
     }
+
+    a,
+    a:visited {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    
   </style>
 </head>
 <body>
