--- a/form-pecas.html
+++ b/form-pecas.html
@@ -93,15 +93,19 @@
       align-items: center;
       gap: 8px;
       color: white;
-      text-decoration: none;
+      text-decoration: none !important;
       font-size: 16px;
       font-weight: bold;
       margin: 20px;
       transition: 0.3s;
     }
-
-    .voltar i {
-      font-size: 18px;
+    
+    .voltar:visited,
+    .voltar:focus,
+    .voltar:hover,
+    .voltar:active {
+      color: white;
+      text-decoration: none !important;
     }
 
     .voltar:hover {
