--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
       font-weight: bold;
       color: white;
     }
+
+    a,
+    a:visited {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    
   </style>
 </head>
 <body>
