--- a/form-servicos.html
+++ b/form-servicos.html
@@ -119,6 +119,8 @@
     </a>
     
     <h2>Formulário de Serviços</h2>
+
+    <form onsubmit="enviarChecklist(event, 'checklistServicos')">
     
     <form>
 
