--- a/form-PLM.html
+++ b/form-PLM.html
@@ -20,6 +20,7 @@
       border-radius: 12px;
       padding: 30px;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-sizing: border-box;
     }
 
     h2 {
@@ -96,17 +97,32 @@
       text-decoration: none;
       font-size: 16px;
       font-weight: bold;
-      margin: 20px;
+      margin: 20px 0;
       transition: 0.3s;
-    }
-
-    .voltar i {
-      font-size: 18px;
     }
 
     .voltar:hover {
       color: #00bbf9;
       transform: translateX(-5px);
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        max-width: 300px;
+        padding: 20px;
+      }
+
+      input, textarea, select {
+        width: 100%;
+      }
+
+      .checkbox-group label {
+        width: 100%;
+      }
+
+      button {
+        width: 100%;
+      }
     }
   </style>
 </head>
@@ -120,7 +136,7 @@
     
     <h2>Formulário de PLM</h2>
     
-    <form>
+    <form onsubmit="enviarChecklist(event, 'checklistPLM')">
 
       <label>Data da Visita *</label>
       <input type="date" id="dataVisita" required>
@@ -187,5 +203,7 @@
     });
   </script>
 
+  <!-- Firebase handler (caso esteja usando o mesmo firebase.js do projeto) -->
+  <script type="module" src="firebase.js"></script>
 </body>
 </html>
