--- a/form-PLM.html
+++ b/form-PLM.html
@@ -133,66 +133,65 @@
     <a href="index.html" class="voltar">
       <i class="fas fa-arrow-left"></i> Voltar
     </a>
-    
+
     <h2>Formulário de PLM</h2>
-    
+
     <form onsubmit="enviarChecklist(event, 'checklistPLM')">
 
       <label>Data da Visita *</label>
-      <input type="date" id="dataVisita" required>
+      <input type="date" name="dataVisita" id="dataVisita" required>
 
       <label>Nome do Cliente *</label>
-      <input type="text" required>
+      <input type="text" name="nomeCliente" required>
 
       <label>Nome da Fazenda *</label>
-      <input type="text" required>
+      <input type="text" name="nomeFazenda" required>
 
       <label>Telefone *</label>
-      <input type="tel" required>
+      <input type="tel" name="telefone" required>
 
       <label>Município *</label>
-      <input type="text" required>
+      <input type="text" name="municipio" required>
 
       <label>Modelo da Máquina *</label>
-      <input type="text" required>
+      <input type="text" name="modeloMaquina" required>
 
       <label>Horímetro *</label>
-      <input type="text">
+      <input type="text" name="horimetro" required>
 
       <label>Nome do Consultor *</label>
-      <input type="text" required>
+      <input type="text" name="nomeConsultor" required>
 
       <div class="checkbox-group">
         <label>
-          text
-          <input type="checkbox" name="checklist" value="oleo">
+          Verificação de Antena
+          <input type="checkbox" name="checklist" value="antena">
         </label>
 
         <label>
-          text
-          <input type="checkbox" name="checklist" value="filtros">
+          Configuração de GPS
+          <input type="checkbox" name="checklist" value="gps">
         </label>
 
         <label>
-          text
-          <input type="checkbox" name="checklist" value="pneus">
+          Atualização de Software
+          <input type="checkbox" name="checklist" value="software">
         </label>
 
         <label>
-          text
-          <input type="checkbox" name="checklist" value="cabine">
+          Teste de Comunicação com Monitor
+          <input type="checkbox" name="checklist" value="monitor">
         </label>
       </div>
 
       <label>Observações</label>
-      <textarea rows="4" placeholder="Descreva aqui..."></textarea>
+      <textarea name="observacoes" rows="4" placeholder="Descreva aqui..."></textarea>
 
       <button type="submit">Enviar Checklist</button>
     </form>
   </div>
 
   <script>
-    // Preenche a data com o dia atual automaticamente
     window.addEventListener('DOMContentLoaded', () => {
       const hoje = new Date();
       const yyyy = hoje.getFullYear();
@@ -203,7 +202,6 @@
     });
   </script>
 
-  <!-- Firebase handler (caso esteja usando o mesmo firebase.js do projeto) -->
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
