--- a/form-servicos.html
+++ b/form-servicos.html
@@ -133,66 +133,65 @@
     <a href="index.html" class="voltar">
       <i class="fas fa-arrow-left"></i> Voltar
     </a>
-    
+
     <h2>Formulário de Serviços</h2>
-    
+
     <form onsubmit="enviarChecklist(event, 'checklistServicos')">
 
       <label>Data da Visita *</label>
-      <input type="date" id="dataVisita" required>
+      <input type="date" name="dataVisita" id="dataVisita" required>
 
       <label>Nome do Cliente *</label>
-      <input type="text" required>
+      <input type="text" name="nomeCliente" required>
 
       <label>Nome da Fazenda *</label>
-      <input type="text" required>
+      <input type="text" name="nomeFazenda" required>
 
       <label>Telefone *</label>
-      <input type="tel" required>
+      <input type="tel" name="telefone" required>
 
       <label>Município *</label>
-      <input type="text" required>
+      <input type="text" name="municipio" required>
 
       <label>Modelo da Máquina *</label>
-      <input type="text" required>
+      <input type="text" name="modeloMaquina" required>
 
       <label>Horímetro *</label>
-      <input type="text">
+      <input type="text" name="horimetro" required>
 
       <label>Nome do Consultor *</label>
-      <input type="text" required>
+      <input type="text" name="nomeConsultor" required>
 
       <div class="checkbox-group">
         <label>
-          text
+          Troca de óleo
           <input type="checkbox" name="checklist" value="oleo">
         </label>
 
         <label>
-          text
+          Verificação de filtros
           <input type="checkbox" name="checklist" value="filtros">
         </label>
 
         <label>
-          text
+          Inspeção de pneus
           <input type="checkbox" name="checklist" value="pneus">
         </label>
 
         <label>
-          text
+          Higienização da cabine
           <input type="checkbox" name="checklist" value="cabine">
         </label>
       </div>
 
       <label>Observações</label>
-      <textarea rows="4" placeholder="Descreva aqui..."></textarea>
+      <textarea name="observacoes" rows="4" placeholder="Descreva aqui..."></textarea>
 
       <button type="submit">Enviar Checklist</button>
     </form>
   </div>
 
   <script>
-    // Preenche a data com o dia atual automaticamente
     window.addEventListener('DOMContentLoaded', () => {
       const hoje = new Date();
       const yyyy = hoje.getFullYear();
