--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard - Agro Divel</title>
+  <title>Indicar Interesse - Agro Divel</title>
   
   <!-- Ícone e Manifesto do PWA -->
   <link rel="manifest" href="manifest.json" />
@@ -93,7 +93,7 @@
   <div class="container">
     <div class="header">
       <img src="assets/logo.png" alt="Logo Agro Divel" />
-      <h1>Dashboard de Indicadores</h1>
+      <h1>Indicar Interesse</h1>
     </div>
 
     <div class="dashboard">
