--- a/form-pecas.html
+++ b/form-pecas.html
@@ -129,6 +129,11 @@
 
       input, textarea, select {
         width: 100%;
+        box-sizing: border-box;
+      }
+
+      * {
+        box-sizing: border-box;
       }
 
       .checkbox-group label {
