--- a/form-PLM.html
+++ b/form-PLM.html
@@ -114,6 +114,11 @@
 
       input, textarea, select {
         width: 100%;
+        box-sizing: border-box;
+      }
+
+      * {
+        box-sizing: border-box;
       }
 
       .checkbox-group label {
