--- a/form-comercial.html
+++ b/form-comercial.html
@@ -115,6 +115,11 @@
 
       input, textarea, select {
         width: 100%;
+        box-sizing: border-box;
+      }
+
+      * {
+        box-sizing: border-box;
       }
 
       .checkbox-group label {
