--- a/form-consorcio.html
+++ b/form-consorcio.html
@@ -115,8 +115,12 @@
 
       input, textarea, select {
         width: 100%;
+        box-sizing: border-box;
       }
 
+      * {
+        box-sizing: border-box;
+      }
       .checkbox-group label {
         width: 100%;
       }
