--- a/form-pecas.html
+++ b/form-pecas.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -162,25 +161,25 @@
       <input type="date" name="dataVisita" id="dataVisita" required>
 
       <label>Nome do Cliente *</label>
-      <input type="text" name="nomeCliente" placeholder="Digite o nome" required>
+      <input type="text" name="nomeCliente" placeholder="" required>
 
       <label>Nome da Fazenda *</label>
-      <input type="text" name="nomeFazenda" placeholder="Digite o nome da fazenda" required>
+      <input type="text" name="nomeFazenda" placeholder="" required>
 
       <label>Telefone *</label>
       <input type="tel" name="telefone" required>
 
       <label>Município *</label>
-      <input type="text" name="municipio" placeholder="Digite o município" required>
+      <input type="text" name="municipio" placeholder="" required>
 
       <label>Modelo da Máquina *</label>
-      <input type="text" name="modeloMaquina" placeholder="Digite o modelo da máquina" required>
+      <input type="text" name="modeloMaquina" placeholder="" required>
 
       <label>Horímetro *</label>
       <input type="text" name="horimetro" required>
 
       <label>Nome do Consultor *</label>
-      <input type="text" name="nomeConsultor" placeholder="Digite o nome do consultor" required>
+      <input type="text" name="nomeConsultor" placeholder="" required>
 
       <div class="checkbox-group">
         <label>
