--- a/form-PLM.html
+++ b/form-PLM.html
@@ -169,13 +169,28 @@
 
       <div class="checkbox-group">
         <label>
-          Verificação de Antena
-          <input type="checkbox" name="checklist" value="antena">
+          Monitor de GPS
+          <input type="checkbox" name="checklist" value="Monitor de GPS">
+        </label>
+        
+        <label>
+          Piloto Automatico
+          <input type="checkbox" name="checklist" value="Piloto Automatico">
         </label>
 
         <label>
-          Configuração de GPS
-          <input type="checkbox" name="checklist" value="gps">
+          Monitor de Produtividade Colheitadeira
+          <input type="checkbox" name="checklist" value="Monitor de Produtividade Colheitadeira">
+        </label>
+
+        <label>
+          Taxa variavel
+          <input type="checkbox" name="checklist" value="Taxa variavel">
+        </label>
+
+        <label>
+          Controle de Vazão e Corte de Seção Pulverizador
+          <input type="checkbox" name="checklist" value="Controle de Vazão e Corte de Seção Pulverizador">
         </label>
 
         <label>
@@ -183,10 +198,6 @@
           <input type="checkbox" name="checklist" value="software">
         </label>
 
-        <label>
-          Teste de Comunicação com Monitor
-          <input type="checkbox" name="checklist" value="monitor">
-        </label>
       </div>
 
       <label>Observações</label>
