--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Indicar Interesse - Agro Divel</title>
+  <title>Agro Divel 360</title>
 
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#1e1e2f" />
@@ -95,6 +95,10 @@
       gap: 20px;
     }
 
+    .frase-italico {
+      font-style: italic;
+    }
+
     .card {
       background-color: #2c2f3f;
       border-radius: 12px;
@@ -143,7 +147,7 @@
     <div class="header">
       <img src="assets/logo.png" alt="Logo Agro Divel" />
       <i class="fas fa-bell notification-icon" onclick="abrirPopup()"></i>
-      <h1>Indicar Interesse</h1>
+      <h1 class="frase-italico">Selecione o setor e conecte o cliente à solução ideal.</h1>
     </div>
 
     <div class="popup" id="popup">
