--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="theme-color" content="#1e1e2f" />
   <link rel="icon" href="icons/icon-192.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -96,7 +97,10 @@
     }
 
     .frase-italico {
+      font-family: 'Poppins', sans-serif;
       font-style: italic;
+      font-weight: 300;
+      font-size: 100%;
     }
 
     .card {
