--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     }
 
     .card {
-      background-color: #2c2f3f;
+      background-color: #ffffff;
       border-radius: 12px;
       padding: 40px;
       width: 150px;
@@ -123,14 +123,14 @@
     .card i {
       font-size: 32px;
       margin-bottom: 10px;
-      color: #ffffff;
+      color: #001439;
     }
 
     .card p {
       margin-top: 10px;
       font-size: 18px;
       font-weight: bold;
-      color: white;
+      color: #001439;
     }
 
     a, a:visited {
