--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <h1 class="frase-italico">Selecione o setor e conecte o cliente à solução ideal.</h1>
     </div>
 
-    <div class="popup" id="popup">
+    <div id="popup">
       <h3>Informações do Dia</h3>
       <div id="popup-body">
         <p>Carregando...</p>
