--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
         <i class="fas fa-piggy-bank"></i>
         <p>Consórcio</p>
       </a>
+      <a href="#" class="card">
+        <i class="fas fa-piggy-bank"></i>
+        <p>Plano de Manutenção</p>
+      </a>
+      <a href="#" class="card">
+        <i class="fas fa-piggy-bank"></i>
+        <p>Seguro</p>
+      </a>
     </div>
   </div>
 
