--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         <p>Consórcio</p>
       </a>
       <a href="#" class="card">
-        <i class="fa-regular fa-file"></i>
+        <i class="fa-solid fa-file"></i>
         <p>Plano de Manutenção</p>
       </a>
       <a href="#" class="card">
-        <i class="fa-regular fa-cloud"></i>
+        <i class="fa-solid fa-cloud"></i>
         <p>Seguro</p>
       </a>
     </div>
