--- a/des.html
+++ b/des.html
@@ -187,7 +187,7 @@
     <div style="display: flex; align-items: center; justify-content: space-between;">
         <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 40px;">
         <div style="flex: 1; text-align: center;">
-          Sistema de Checklists - Agro Divel
+          Agro Divel 360
           <div id="dynamic-title" style="font-size: 14px; font-weight: normal; color: #ccc;">Carregando...</div>
         </div>
         <div style="width: 65px;"><!-- espaço para equilibrar a margem direita --></div>
