--- a/des.html
+++ b/des.html
@@ -180,13 +180,22 @@
       color: white;
       margin-left: 10px;
     }
+
+    .frase-italico {
+      font-family: 'Poppins', sans-serif;
+      font-style: italic;
+      font-weight: 300;
+      font-size: 100%;
+    }
+
+    
   </style>
 </head>
 <body>
   <header>
     <div style="display: flex; align-items: center; justify-content: space-between;">
         <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 40px;">
-        <div style="flex: 1; text-align: center;">
+        <div class="frase-italico; style="flex: 1; text-align: center;">
           Agro Divel 360
           <div id="dynamic-title" style="font-size: 14px; font-weight: normal; color: #ccc;">Carregando...</div>
         </div>
