--- a/des.html
+++ b/des.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Dashboard com Firebase</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; }
 
@@ -188,19 +189,20 @@
       font-size: 100%;
     }
 
-    
   </style>
 </head>
 <body>
   <header>
     <div style="display: flex; align-items: center; justify-content: space-between;">
-        <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 40px;">
-        <div class="frase-italico; style="flex: 1; text-align: center;">
-          Agro Divel 360
-          <div id="dynamic-title" style="font-size: 14px; font-weight: normal; color: #ccc;">Carregando...</div>
-        </div>
-        <div style="width: 65px;"><!-- espaço para equilibrar a margem direita --></div>
+      <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 40px;">
+      
+      <div class="frase-italico" style="flex: 1; text-align: center;">
+        Agro Divel 360
+        <div id="dynamic-title" style="font-size: 14px; font-weight: normal; color: #ccc;">Carregando...</div>
       </div>
+
+      <div style="width: 65px;"><!-- espaço para equilibrar a margem direita --></div>
+    </div>
   </header>
 
   <div class="main">
@@ -309,7 +311,7 @@
         if (!isNaN(d.valorNegociado)) valorTotal += Number(d.valorNegociado);
       });
 
-      // 🧠 Ordenar por status
+      // Ordenar por status
       documentos.sort((a, b) => {
         const prioridade = (status) => {
           if (!status || status === "Em andamento") return 0;
