--- a/des.html
+++ b/des.html
@@ -10,7 +10,7 @@
 
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #1e1e2f;
       color: white;
       display: flex;
@@ -30,10 +30,11 @@
     }
 
     #dynamic-title {
-      margin-top: 10px;
-      font-size: 16px;
-      font-weight: normal;
-      color: #ccc;
+      margin-top: 6px;
+      font-size: 14px;
+      font-weight: 300;
+      font-style: italic;
+      color: #aaa;
     }
 
     .main {
@@ -56,31 +57,15 @@
       background-color: #1e1e2f;
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.3);
-      transition: transform 0.2s;
+      box-shadow: 0 0 8px rgba(0,0,0,0.3);
+      text-align: center;
     }
 
-    .card:hover {
-      transform: translateY(-4px);
+    .card p {
+      margin-top: 5px;
+      font-size: 14px;
+      color: #aaa;
     }
-
-    .bar {
-      height: 8px;
-      background-color: #444;
-      border-radius: 4px;
-      margin-top: 10px;
-    }
-
-    .bar span {
-      display: block;
-      height: 100%;
-      border-radius: 4px;
-    }
-
-    .pink { background-color: #ff5ec3; }
-    .orange { background-color: #faae42; }
-    .blue { background-color: #00bbf9; }
-    .purple { background-color: #c77dff; }
 
     .content {
       flex: 1;
@@ -98,7 +83,7 @@
     }
 
     th, td {
-      font-size: 12px;
+      font-size: 13px;
       padding: 10px 15px;
       text-align: left;
       border-bottom: 1px solid #444;
@@ -106,7 +91,8 @@
 
     th {
       background-color: #2c2f3f;
-      color: #cca700;
+      color: #f1c40f;
+      font-weight: 500;
     }
 
     .acoes button {
@@ -133,267 +119,24 @@
       .content { padding: 15px; }
     }
 
-    /* POPUP STYLES */
-    #popup {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-
-    #popup > div {
-      background: #2c2f3f;
-      padding: 20px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 400px;
-      color: white;
-    }
-
-    #popup textarea,
-    #popup input,
-    #popup select {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border: none;
-      border-radius: 6px;
-    }
-
-    #popup button {
-      padding: 8px 16px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-    }
-
-    #popup button:first-of-type {
-      background: #00bbf9;
-      color: white;
-    }
-
-    #popup button:last-of-type {
-      background: #444;
-      color: white;
-      margin-left: 10px;
-    }
-
     .frase-italico {
       font-family: 'Poppins', sans-serif;
       font-style: italic;
       font-weight: 300;
       font-size: 100%;
     }
-
   </style>
 </head>
 <body>
   <header>
     <div style="display: flex; align-items: center; justify-content: space-between;">
       <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 40px;">
-      
       <div class="frase-italico" style="flex: 1; text-align: center;">
         Agro Divel 360
-        <div id="dynamic-title" style="font-size: 14px; font-weight: normal; color: #ccc;">Carregando...</div>
+        <div id="dynamic-title">Carregando...</div>
       </div>
-
-      <div style="width: 65px;"><!-- espaço para equilibrar a margem direita --></div>
+      <div style="width: 65px;"></div>
     </div>
   </header>
-
-  <div class="main">
-    <div class="sidebar">
-      <div class="card">
-        <h2 id="total-clientes">0</h2>
-        <p>Total Clientes</p>
-        <div class="bar"><span class="pink" style="width: 100%;"></span></div>
-      </div>
-      <div class="card">
-        <h2 id="total-concluidos">0</h2>
-        <p>Concluídos</p>
-        <div class="bar"><span class="orange" id="bar-concluidos"></span></div>
-      </div>
-      <div class="card">
-        <h2 id="valor-total">0</h2>
-        <p>Valor Total (R$)</p>
-        <div class="bar"><span class="blue" style="width: 100%;"></span></div>
-      </div>
-      <div class="card">
-        <h2 id="cancelados">0</h2>
-        <p>Cancelados</p>
-        <div class="bar"><span class="purple" id="bar-cancelados"></span></div>
-      </div>
-    </div>
-
-    <div class="content">
-      <table>
-        <thead>
-          <tr>
-            <th>Cliente</th>
-            <th>Fazenda</th>
-            <th>Consultor</th>
-            <th>Data da Visita</th>
-            <th>Modelo</th>
-            <th>Município</th>
-            <th>Horímetro</th>
-            <th>Telefone</th>
-            <th>Observações</th>
-            <th>Checklist</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-        <tbody id="painel-detalhes"></tbody>
-      </table>
-    </div>
-  </div>
-
-  <!-- POPUP -->
-  <div id="popup">
-    <div>
-      <h3>Atualizar Checklist</h3>
-      <input type="hidden" id="docIdSelecionado">
-
-      <label>Comentário do Responsável</label>
-      <textarea id="comentario"></textarea>
-
-      <label>Status</label>
-      <select id="statusChecklist">
-        <option value="Em andamento">Em andamento</option>
-        <option value="Concluído">Concluído</option>
-        <option value="Cancelado">Cancelado</option>
-      </select>
-
-      <label>Valor Negociado (R$)</label>
-      <input type="number" id="valorNegociado">
-
-      <button onclick="salvarPopup()">Salvar</button>
-      <button onclick="fecharPopup()">Cancelar</button>
-    </div>
-  </div>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, getDocs, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-    const tipoChecklist = new URLSearchParams(window.location.search).get("tipo") || "checklistComercial";
-
-    const app = initializeApp({
-      apiKey: "AIzaSyDcjPa9jXsCCu6lNc1fjVg4Bzz1toKWAGY",
-      authDomain: "agro-divel.firebaseapp.com",
-      projectId: "agro-divel"
-    });
-
-    const db = getFirestore(app);
-
-    document.getElementById("dynamic-title").textContent =
-      tipoChecklist === "checklistComercial" ? "Checklist Comercial" :
-      tipoChecklist === "checklistRevisao" ? "Checklist de Revisão" :
-      tipoChecklist === "checklistPecas" ? "Checklist de Peças" : "Painel";
-
-    async function carregarDados() {
-      const querySnapshot = await getDocs(collection(db, tipoChecklist));
-      const painel = document.getElementById("painel-detalhes");
-      let total = 0, concluidos = 0, cancelados = 0, valorTotal = 0;
-
-      const documentos = [];
-
-      querySnapshot.forEach((docItem) => {
-        const d = docItem.data();
-        documentos.push({ id: docItem.id, ...d });
-
-        total++;
-        if (d.statusChecklist === "Concluído") concluidos++;
-        if (d.statusChecklist === "Cancelado") cancelados++;
-        if (!isNaN(d.valorNegociado)) valorTotal += Number(d.valorNegociado);
-      });
-
-      // Ordenar por status
-      documentos.sort((a, b) => {
-        const prioridade = (status) => {
-          if (!status || status === "Em andamento") return 0;
-          if (status === "Concluído") return 1;
-          if (status === "Cancelado") return 2;
-          return 3;
-        };
-        return prioridade(a.statusChecklist) - prioridade(b.statusChecklist);
-      });
-
-      painel.innerHTML = "";
-
-      documentos.forEach((d) => {
-        const statusClass = d.statusChecklist === "Concluído" ? "status-concluido" :
-                            d.statusChecklist === "Cancelado" ? "status-cancelado" :
-                            d.statusChecklist === "Em andamento" ? "status-em-andamento" : "";
-
-        painel.innerHTML += `
-          <tr class="${statusClass}">
-            <td>${d.nomeCliente || "-"}</td>
-            <td>${d.nomeFazenda || "-"}</td>
-            <td>${d.consultor || "-"}</td>
-            <td>${d.dataVisita || "-"}</td>
-            <td>${d.modelo || "-"}</td>
-            <td>${d.municipio || "-"}</td>
-            <td>${d.horimetro || "-"}</td>
-            <td>${d.telefone || "-"}</td>
-            <td>${d.observacoes || "-"}</td>
-            <td>${(d.checklist || []).map(item => `<span style="background:#00bbf9; color:#fff; padding:3px 8px; border-radius:5px; margin:2px; display:inline-block; font-size:12px">${item}</span>`).join("")}</td>
-            <td class="acoes">
-              <button onclick="abrirPopup('${d.id}')">➕ Ações</button>
-            </td>
-          </tr>`;
-      });
-
-      document.getElementById("total-clientes").textContent = total;
-      document.getElementById("total-concluidos").textContent = concluidos;
-      document.getElementById("cancelados").textContent = cancelados;
-      document.getElementById("valor-total").textContent = `R$ ${valorTotal.toLocaleString('pt-BR', { minimumFractionDigits: 2 })}`;
-
-      document.getElementById("bar-concluidos").style.width = total ? (concluidos / total) * 100 + "%" : "0%";
-      document.getElementById("bar-cancelados").style.width = total ? (cancelados / total) * 100 + "%" : "0%";
-    }
-
-    window.addEventListener("DOMContentLoaded", carregarDados);
-
-    // Funções do Popup
-    window.abrirPopup = async function(id) {
-      document.getElementById("popup").style.display = "flex";
-      document.getElementById("docIdSelecionado").value = id;
-
-      const docRef = doc(db, tipoChecklist, id);
-      const docSnap = await getDoc(docRef);
-
-      if (docSnap.exists()) {
-        const dados = docSnap.data();
-        document.getElementById("comentario").value = dados.comentarioResponsavel || "";
-        document.getElementById("statusChecklist").value = dados.statusChecklist || "Em andamento";
-        document.getElementById("valorNegociado").value = dados.valorNegociado || "";
-      }
-    }
-
-    window.fecharPopup = function() {
-      document.getElementById("popup").style.display = "none";
-    }
-
-    window.salvarPopup = async function() {
-      const id = document.getElementById("docIdSelecionado").value;
-      const comentario = document.getElementById("comentario").value;
-      const status = document.getElementById("statusChecklist").value;
-      const valor = parseFloat(document.getElementById("valorNegociado").value) || 0;
-
-      const docRef = doc(db, tipoChecklist, id);
-      await updateDoc(docRef, {
-        comentarioResponsavel: comentario,
-        statusChecklist: status,
-        valorNegociado: valor
-      });
-
-      fecharPopup();
-      carregarDados();
-    }
-  </script>
 </body>
 </html>
